--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,15 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:onClick="toDashBoardView"
-                android:text="DashBoardView" />
+                android:text="Dash Board View" />
+
+            <Button
+                style="@style/Base.TextAppearance.AppCompat.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:onClick="toWeatherLineFiveView"
+                android:text="Weather Line Five View" />
 
         </LinearLayout>
 
